# terraform-provider-sshkey

./: .checkov.yaml  .cruft.json  .envrc  .gitignore  .golangci.yml  .goreleaser.yml  .pre-commit-config.yaml  .prettierignore  .pytest.toml  .trivy.yml  CHANGELOG.md  CODINGSTYLE.md  LICENSE  README.md  Taskfile.yml  go.mod  go.sum  main.go  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: cd.yaml  cd.yml  ci.yaml  ci.yml  claude-code-review.yaml  claude.yaml
.trunk/: trunk.yaml
deployment/: README.md  Taskfile.yml  main.tf  versions.tf
docs/: index.md
docs/data-sources/: scaffolding_example.md
docs/resources/: pair.md  scaffolding_example.md
examples/data-sources/sshkey_pair/: data-source.tf
examples/full/: main.tf
examples/provider/: provider.tf
examples/resources/sshkey_pair/: resource.tf
internal/keygen/: keygen.go  keygen_test.go
internal/provider/: provider.go  provider_test.go  sshkey_pair_resource.go  sshkey_pair_resource_test.go
tools/: release.py
