[project]
name = "terraform_provider_sshkey"
version = "0.1.9"
description = "sshkey TF provider"
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = "Apache-2.0"
dependencies = []

[[project.authors]]
name = "Justin Lecher"
email = "justin@jlec.de"

[dependency-groups]
dev = [
  "bpython>=0.25",
  "ptpython>=3.0.31",
  "pytest>=8.3.5",
  "pytest-asyncio>=1.2.0",
  "pytest-clarity>=1.0.1",
  "pytest-xdist>=3.6.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "0.1.9"
version_files = [
  "VERSION",
  "pyproject.toml:version",
]

[tool.ruff]
line-length = 128
target-version = "py314"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
ignore = ["B008", "C901"]
select = ["B", "C", "E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
